<resources>
    <string name="app_name">MobileStoreApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="food_image">food image</string>
    <string name="location">,Ejisu</string>
    <string name="seller">God\'s Grace</string>
    <string name="food_title">Pizza</string>
    <string name="blurred_image">Blurred Image</string>
    <string name="caption_image">caption image</string>
    <string name="action_search">Search</string>
    <string name="no_internet">Offline</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="questionnaire">Already have an account?</string>
    <string name="gender">Gender:</string>
    <string name="age">Age</string>
    <string name="location_title">Location:</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="send_button_content_descrip">Send Button</string>
    <string name="submit_enquiry">Make your enquiry …</string>
    <string name="enquiry">Enquiries</string>
    <string name="phone_number">Phone Number</string>
    <string name="age_number">00</string>
    <string name="place_located">Unknown Location</string>
    <string name="default_email">johndoe@gmail.com</string>
    <string name="default_phone">xxx-xxx-xxxx</string>
    <string name="dialog_message">Location permission needed for delivery of food</string>
    <string name="okayButton">OK</string>
    <string name="cancel">Cancel</string>
    <string name="date_of_birth">Date of birth (yyyy-mm-dd)</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="food">Food :</string>
    <string name="description">Description :</string>
    <string name="quantity">Quantity :</string>
    <string name="options">Options :</string>
    <string name="quantity_hint">0</string>
    <string name="price">Price :</string>
    <string name="total_amount">%$.02f%%</string>
    <string name="food_in_cart">image of food in cart</string>
    <string name="remove_item">Remove item from cart button</string>
    <string name="cart">Cart</string>
    <string name="personal_details">Personal Details</string>
    <string name="order_details">Order Details</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone_no">Phone No.:</string>
    <string name="total_quantity">Total Quantity:</string>
    <string name="sum_total">Sum Total:</string>
    <string name="birthday">Birthday:</string>
    <string name="email_edit_button">email edit button</string>
    <string name="birthdate">dd/mm/yyyy</string>
    <string name="phone_number_edit_button">phone number edit button</string>
    <string name="birthday_edit_button">birthday edit button</string>
    <string name="gender_edit_button">gender edit button</string>
    <string name="default_location">Unknown Location</string>

    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="theme_list">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>