<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F3F3"
    android:scrollbars="none"
    android:paddingTop="10dp"
    tools:context=".Fragments.FragmentOrder">

    <GridLayout
        android:id="@+id/orderGridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:columnCount="2">

        <TextView
            android:id="@+id/foodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:text="@string/food"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/foodNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/foodDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/foodDescriptionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:ems="10"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/foodQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:text="@string/quantity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/foodQuantityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginStart="10dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/quantity_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/foodOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:text="@string/options"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/optionsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:orientation="vertical"
            android:layout_marginStart="10dp"/>



        <TextView
            android:id="@+id/foodPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:text="@string/price"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/foodPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/add_to_cart_button"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_to_cart"
            android:textColor="#ffffff"
            android:background="@drawable/button_drawable"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"/>

    </GridLayout>

</ScrollView>
