<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/order_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/personDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/personal_details"
            android:background="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:elevation="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <GridLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:useDefaultMargins="true"
            android:columnCount="2">

            <TextView
                android:id="@+id/customer_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_gravity="fill_horizontal"/>

            <TextView
                android:id="@+id/customer_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/email"
                android:layout_gravity="fill_horizontal"/>

            <TextView
                android:id="@+id/customer_phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/phone_no"
                android:layout_gravity="fill_horizontal"/>



            <TextView
                android:id="@+id/customer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_gravity="fill_horizontal"/>

            <TextView
                android:id="@+id/customer_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_gravity="fill_horizontal"/>

            <TextView
                android:id="@+id/customer_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_gravity="fill_horizontal"/>


        </GridLayout>

        <TextView
            android:id="@+id/orderDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/order_details"
            android:background="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:elevation="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>

</ScrollView>