<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".LoginActivity">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/full_name_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/text_input_layout_margin_top_small"
        android:hint="@string/full_name"
        android:textColorHint="@color/text_input_layout_color"
        app:hintTextAppearance="?android:attr/textAppearanceMedium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/full_name_edit_text"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:background="@drawable/edit_text_drawable"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/text_input_layout_margin_top_small"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/text_input_layout_color"
        app:hintTextAppearance="?android:attr/textAppearanceMedium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:background="@drawable/edit_text_drawable"
            android:inputType="textEmailAddress"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/number_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/text_input_layout_margin_top_small"
        android:hint="@string/phone_number"
        android:textColorHint="@color/text_input_layout_color"
        app:hintTextAppearance="?android:attr/textAppearanceMedium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_edit_text"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:background="@drawable/edit_text_drawable"
            android:inputType="phone"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/text_input_layout_margin_top_small"
        android:hint="@string/password"
        android:textColorHint="@color/text_input_layout_color"
        app:passwordToggleEnabled="true"
        app:hintTextAppearance="?android:attr/textAppearanceMedium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:background="@drawable/edit_text_drawable"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/text_input_layout_margin_top_small"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/text_input_layout_color"
        app:passwordToggleEnabled="true"
        app:hintTextAppearance="?android:attr/textAppearanceMedium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:background="@drawable/edit_text_drawable"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top_small"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        android:padding="10dp"
        android:textColor="@color/button_text_color"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@drawable/button_drawable"/>



</LinearLayout>